--- a/src/styles/element-plus/color.scss
+++ b/src/styles/element-plus/color.scss
@@ -2,7 +2,7 @@
 @forward 'element-plus/theme-chalk/src/common/var.scss' with (
   $colors: (
     'primary': (
-      'base': green
+      'base': rgb(8, 143, 153)
     )
   )
 );
