--- a/src/styles/element-plus/dark-css-vars.scss
+++ b/src/styles/element-plus/dark-css-vars.scss
@@ -1,6 +1,8 @@
 @import 'element-plus/theme-chalk/dark/css-vars.css';
 
 html.dark {
-  --el-bg-color-page: blue !important;
-  --el-color-primary: blue;
+  --el-bg-color: black !important;
+  --el-color-primary: rgb(34 77 219);
+
+  background-color: var(--el-bg-color);
 }
