--- a/src/styles/element-plus/color.scss
+++ b/src/styles/element-plus/color.scss
@@ -1,4 +1,4 @@
-/* 只需要重写你需要的即可 */
+/* 覆盖element-plus scss变量 */
 @forward 'element-plus/theme-chalk/src/common/var.scss' with (
   $colors: (
     'primary': (
