--- a/plop-templates/store/index.hbs
+++ b/plop-templates/store/index.hbs
@@ -1,4 +1,5 @@
 import { defineStore, type Pinia } from 'pinia'
+import { store } from '@/stores/index'
 
 export const use{{properCase name}}Store = defineStore('{{name}}', {
   state: () => {
