--- a/src/styles/transition/fade.scss
+++ b/src/styles/transition/fade.scss
@@ -6,12 +6,12 @@
 
 .slide-fade-enter-from {
   opacity: 0;
-  transform: translateX(-50%);
+  transform: translateX(-30px);
 }
 
 .slide-fade-leave-to {
   opacity: 0;
-  transform: translateX(50%);
+  transform: translateX(30px);
 }
 
 .slide-fade-leave-active {
