--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,29 @@
   font-weight: normal;
 }
 
+html,
 body {
+  height: 100vh;
   min-height: 100vh;
+}
+
+#app {
+  height: 100%;
+}
+
+// ::-webkit-scrollbar-thumb {
+//   width: 10px;
+//   background-color: #66212197;
+// }
+
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #eee;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #eeeeee6d;
 }
