--- a/src/styles/element-plus/css-var.scss
+++ b/src/styles/element-plus/css-var.scss
@@ -1,3 +1,26 @@
 :root {
   --el-aside-width: 180px;
 }
+
+.el-aside.isCollapsed {
+  --el-aside-width: 64px;
+}
+
+.el-aside {
+  transition: width 0.35s ease-in, transform 0.1s ease-in;
+}
+
+@media screen and (max-width: 720px) {
+  .el-aside {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #fff;
+  }
+
+  .mobile-menu-mask {
+    display: block;
+  }
+}
