--- a/src/styles/element-plus/css-var.scss
+++ b/src/styles/element-plus/css-var.scss
@@ -7,5 +7,5 @@
 }
 
 .el-aside {
-  transition: width 0.35s ease-in, transform 0.1s ease-in;
+  transition: width 0.075s linear, transform 0.1s ease-in;
 }
