--- a/src/styles/element-plus/dark-css-vars.scss
+++ b/src/styles/element-plus/dark-css-vars.scss
@@ -2,7 +2,7 @@
 
 html.dark {
   --el-bg-color: black !important;
-  --el-color-primary: rgb(34 77 219);
+  --el-color-primary: rgb(34 182 219 / 65.8%);
 
   background-color: var(--el-bg-color);
 }
